--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <section style="height: 450px; width: 1000px; border: 1px solid green; margin: auto;">
             <br><br><br>
             <div id="texto" style="width: 485px; height: 350px; float: right; background-color: black;"></div>
-            <div id="img" style="width: 485px; height: 350px;  background-color:aqua"></div>
+            <div id="img" style="width: 485px; height: 350px; ">
+                <img src="./IMAGENS/ovopascoa_05.png" alt="foto1" style="width: 485px; height: 350px;">
+            </div>
         </section>
         <section  style="height: 650px; width: 1000px; border: 1px solid green; margin: auto;" >
             <div id="img2" style="width: 500px; height: 350px; background-color: blue; margin: auto;"></div>
